chore: devcontainers missing socket

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 GOOSE_DRIVER=postgres
-GOOSE_DBSTRING=postgres://ecommerce:ecommerce@ecommerce-database:5432/ecommerce
+GOOSE_DBSTRING=postgres://ecommerce:ecommerce@localhost:5401/ecommerce
 GOOSE_MIGRATION_DIR=./migrations
 GOOSE_TABLE=ecommerce.goose_migrations
-DB_HOST=ecommerce-database
-DB_PORT=5432
+DB_HOST=localhost
+DB_PORT=5401
 DB_USERNAME=ecommerce
 DB_PASSWORD=ecommerce
 DB_DATABASE=ecommerce
