--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,11 @@
 {
   "name": "Go + Postgres Dev C  ontainer",
-  "dockerComposeFile": "docker-compose.yml",
+  "dockerComposeFile": "../docker-compose.yml",
   "service": "dev_environment",
   "workspaceFolder": "/workspace",
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+  ],
   "settings": {
     "go.toolsManagement.autoUpdate": true
   },
@@ -10,11 +13,19 @@
     "golang.go",
     "ms-azuretools.vscode-docker"
   ],
-  "postCreateCommand": "go mod tidy",
+  "postCreateCommand": "/workspace/.devcontainer/setup.sh",
   "forwardPorts": [
     5432,
     8080,
     5173
   ],
-  "remoteUser": "vscode"
-}  
+  "remoteUser": "root",
+  "customizations": {
+    "jetbrains": {
+      "settings": {
+        "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
+        "com.intellij:app:BaseRefactoringSettings.move_search_for_references_for_file": false
+      }
+    }
+  }
+}
