--- a/gocommerce/package.json
+++ b/gocommerce/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -35,9 +37,7 @@
     "tailwindcss": "^4.1.16",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "7.1.11"
+    "vite": "7.1.11",
+    "js-cookies": "^1.0.4"
   }
-
 }
-
-
