feat: queue listening

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ DB_PASSWORD=ecommerce
 DB_DATABASE=ecommerce
 DB_SCHEMA=ecommerce
 APP_PORT=:8080
+BROKER_PROTOCOL=amqp
+BROKER_USERNAME=developer
+BROKER_PASSWORD=developer
+BROKER_ADDRESS=localhost
+BROKER_PORT=5672
