--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ecommerce-database
 
   ecommerce-database:
-    image: postgres
+    image: postgres:18-alpine
     container_name: ecommerce-database
     volumes:
       - ecommerce-volume:/data/postgres
@@ -30,7 +30,7 @@ services:
       - PGDATA=/data/postgres
       - POSGRES_DB=ecommerce
     ports:
-      - "5401:5432"
+      - "5432:5432"
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
