--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,16 +1,14 @@
-# Base image — example
 FROM golang:1.25.4
 
-# Install required packages
-RUN apt-get update && apt-get install -y curl git bash
+RUN apt-get update && apt-get install -y \
+    curl git bash docker.io \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install NVM (official way)
+# Install NVM
 ENV NVM_DIR=/usr/local/nvm
 ENV NODE_VERSION=lts
-
 RUN mkdir -p $NVM_DIR \
     && curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
 
-# Add nvm, node, npm to PATH
 ENV NODE_PATH=$NVM_DIR/versions/node/$NODE_VERSION/lib/node_modules
 ENV PATH=$NVM_DIR/versions/node/$NODE_VERSION/bin:$PATH
