--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,31 +1,33 @@
 {
-  "name": "Go + Postgres Dev C  ontainer",
+  "name": "Go + Postgres Dev Container",
   "dockerComposeFile": "../docker-compose.yml",
   "service": "dev_environment",
+
   "workspaceFolder": "/workspace",
+
   "mounts": [
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
   ],
-  "settings": {
-    "go.toolsManagement.autoUpdate": true
-  },
-  "extensions": [
-    "golang.go",
-    "ms-azuretools.vscode-docker"
-  ],
-  "postCreateCommand": "/workspace/.devcontainer/setup.sh",
   "forwardPorts": [
     5432,
     8080,
     5173
   ],
-  "remoteUser": "root",
-  "customizations": {
-    "jetbrains": {
-      "settings": {
-        "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
-        "com.intellij:app:BaseRefactoringSettings.move_search_for_references_for_file": false
-      }
-    }
-  }
+  "containerEnv": {
+    "TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE": "/var/run/docker.sock",
+    "DOCKER_HOST": "unix:///var/run/docker.sock"
+  },
+
+  "settings": {
+    "go.toolsManagement.autoUpdate": true
+  },
+
+  "extensions": [
+    "golang.go",
+    "ms-azuretools.vscode-docker"
+  ],
+
+  "postCreateCommand": "/workspace/.devcontainer/setup.sh",
+
+  "remoteUser": "root"
 }
