--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,8 @@
 GOOSE_DRIVER=postgres
-GOOSE_DBSTRING=postgres://ecommerce:ecommerce@localhost:5432/ecommerce
+GOOSE_DBSTRING=postgres://ecommerce:ecommerce@ecommerce-database:5432/ecommerce
 GOOSE_MIGRATION_DIR=./migrations
 GOOSE_TABLE=ecommerce.goose_migrations
-DB_HOST=localhost
+DB_HOST=ecommerce-database
 DB_PORT=5432
 DB_USERNAME=ecommerce
 DB_PASSWORD=ecommerce
@@ -12,5 +12,6 @@ APP_PORT=:8080
 BROKER_PROTOCOL=amqp
 BROKER_USERNAME=developer
 BROKER_PASSWORD=developer
-BROKER_ADDRESS=localhost
+BROKER_ADDRESS=rabbitmq
 BROKER_PORT=5672
+CONTAINER_URL=172.17.0.1
