--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,7 @@
-name: Go CI (Dev Container + Testcontainers)
+# This workflow will build a golang project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+
+name: Go
 
 on:
   push:
@@ -7,27 +10,19 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
 
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Run build
-        uses: devcontainers/ci@v0.3
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          runCmd: |
-            # Run the devcontainer, with Docker socket mounted
-            devcontainer exec \
-              --workspace-folder . \
-              --docker-host=inherit \
-              bash -c "go build -v ./.. "
-      - name: Run test
-        uses: devcontainers/ci@v0.3
-        with:
-          runCmd: |
-            # Run the devcontainer, with Docker socket mounted
-            devcontainer exec \
-              --workspace-folder . \
-              --docker-host=inherit \
-              bash -c "go test -v ./..."
+          go-version: '1.25.4'
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
